--- a/src/index.scss
+++ b/src/index.scss
@@ -9,14 +9,122 @@
 }
 
 .demo-wrapper {
-    width: 70%
+    width: 100%
 }
 
 .flex-container__main {
     textarea {
-        width: 70%;
+        width: 100%;
         min-height: 4rem;
         margin-bottom: 1rem;
         border: solid 1px #dfdfdf;
+        box-sizing: border-box;
     }
+}
+
+
+.search-bar {
+    position: absolute;
+    top: 0;
+    top: .5rem;
+    width: 70%;
+    right: 1.5rem;
+    border-bottom: solid 0px;
+    left: 7rem;
+
+    @include desktop {
+        left: 3.5rem;
+    }
+
+    input {
+        background-color: #502b8c;
+        border: solid 1px whitesmoke;
+        border-radius: 8px;
+        width: 70%;
+        color: white;
+        height: 3rem;
+        position: absolute;
+        margin-top: .2rem;
+        left: 3rem;
+        -webkit-transform: translate(-125vw);
+        /* -webkit-transform: translate(110%); */
+        /* transform: translate(110%);*/
+        transition: all .6s;
+        font-size: 1rem;
+        padding-top: .5rem;
+
+        @include desktop {
+            margin-top: -.4rem;
+        }
+
+        &::placeholder {
+            /* Chrome, Firefox, Opera, Safari 10.1+ */
+            color: white;
+            font-size: 1rem;
+
+            letter-spacing: 1px;
+            margin-top: .5rem;
+            /* Firefox */
+        }
+
+        &:-ms-input-placeholder {
+            /* Internet Explorer 10-11 */
+            color: white;
+        }
+
+        &::-ms-input-placeholder {
+            /* Microsoft Edge */
+            color: white;
+        }
+
+        &.active {
+            transform: translate(0%);
+            transform: translate(0%);
+            transition: all .6s;
+        }
+    }
+
+    i {
+        position: absolute;
+        right: -0.5rem;
+        z-index: 9999;
+        height: 1.3rem;
+        width: 1.3rem;
+        color: white;
+        background-color: #583296;
+        padding: 1rem;
+        border-radius: 50%;
+        box-shadow: 0px 0px 1px 1px #c1c1c1;
+
+        @include desktop {
+            margin-top: -.5rem;
+
+        }
+    }
+
+}
+
+
+br {
+    clear: both;
+}
+
+
+.flex {
+    display: flex;
+
+    .col-flex {
+        width: 30%;
+    }
+}
+
+
+.results-grid {
+    width: 43%;
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
+    float: left;
+    margin-right: 1.5rem;
+
 }
