--- a/src/styles/Blog/blog.scss
+++ b/src/styles/Blog/blog.scss
@@ -1,14 +1,20 @@
 body {
     box-sizing: border-box;
+    margin: 0;
+    position: relative;
+    display: block;
+    overflow-x: hidden;
 }
 
 .flex-container {
     margin-left: 20px;
     margin-right: 20px;
+
     @include desktop {
         display: flex;
         justify-content: space-around;
     }
+
     @include tablet {
         display: block;
     }
@@ -17,6 +23,7 @@ body {
 .flex-container__sidebar {
     float: right;
     display: block;
+
     @include desktop {
         width: 50%;
     }
@@ -26,12 +33,15 @@ body {
     width: 100%;
     float: left;
     display: block;
+
+
     // @include tablet {
     //     width: 50%;
     // }
     @include desktop {
         margin-left: 20px;
         margin-right: 20px;
+        padding-right: 5rem;
     }
 }
 
