--- a/src/styles/Post/post.scss
+++ b/src/styles/Post/post.scss
@@ -1,43 +1,49 @@
 #post {
     #edit-delete-container {
+        float: right;
+
         a {
             margin: 10px;
             font-family: $font-stack;
             text-decoration: none;
             color: red;
             text-transform: uppercase;
+
             &:hover {
                 color: darkred;
             }
         }
     }
+
     h2 {
         text-transform: uppercase;
-        font-family: $font-stack;
-        color: $dark-gray;
-        font-weight: bold;
+        font-family: "Karla", "sans-serif";
+        color: #5f5f5f;
+        font-weight: 600;
         letter-spacing: 3px;
-        font-size: 19px;
+        font-size: 2rem;
     }
+
     img {
-        width: 350px;
-        @include desktop {
-            width: 700px;
-        }
+        // width: 350px;
+        width: 100%;
     }
+
     p {
-        @include paragraph;
-        width: 350px;
-        @include desktop {
-            width: 700px;
-        }
+        line-height: 2;
+        color: #3e3e3e;
+        font-size: 1.2rem;
+        text-align: justify;
     }
+
     button {
         @include button;
     }
+
     #flex-container-tags {
         display: flex;
     }
+
     h3 {
         text-transform: uppercase;
         font-family: $font-stack;
@@ -45,16 +51,20 @@
         font-weight: bold;
         letter-spacing: 3px;
     }
+
     ul {
         display: flex;
         list-style-type: none;
+
         li {
             margin: 5px;
             font-family: $font-stack;
+
             a {
                 color: $dark-gray;
                 text-decoration: none;
                 transition: all .1s ease-in-out;
+
                 &:hover {
                     color: $blue-green;
                 }
