--- a/src/styles/navigation/Navbar.scss
+++ b/src/styles/navigation/Navbar.scss
@@ -1,14 +1,28 @@
 nav {
     font-family: $font-stack;
-    background-color: #fee6b6;
+    background-color: #583296;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     z-index: 10;
+    transform: translate(0%, -105%);
+    transition: all .5s;
+    padding-top: 4rem;
+
+    @include desktop {
+        transform: translate(0%, 0%);
+        padding-top: 0rem;
+    }
+
+    &.active {
+        transform: translate(0);
+        transition: all .5s;
+    }
 
     ul {
         list-style: none;
+        padding-left: 0;
 
         @include desktop {
             display: flex;
@@ -17,10 +31,52 @@ nav {
     }
 
     li {
+        padding: 1rem;
+        border-bottom: solid 1px #9668e0;
+
+        @include desktop {
+            width: auto;
+            display: inline-block;
+        }
+
         a {
             text-decoration: none;
             text-transform: uppercase;
             color: white;
+            position: relative;
         }
+    }
+}
+
+.burger--button {
+    width: 1.2rem;
+    margin: auto;
+    float: left;
+    position: absolute;
+    left: 1.5rem;
+    top: -1.3rem;
+    background-color: #583296;
+    padding: .9rem 1rem;
+    border-radius: 50%;
+    color: white;
+    box-shadow: 0px 0px 1px 1px #c1c1c1;
+    z-index: 999;
+
+    @include desktop {
+        display: none;
+    }
+}
+
+.nav-flex {
+    @include desktop {
+        display: flex;
+        width: 75%;
+        justify-content: right;
+
+
+        li {
+            border-bottom: solid 0px;
+        }
+
     }
 }
