--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,6 @@ $light-pink: rgb(234,
 181,
 173);
 $lighter-pink: #fbd0c6;
-$dark-gray: #6d6e71;
+$dark-gray: #5a5a5a;
 $blue-green: #9ad1c1;
 $hover-green: #82b3a5;
